turtleart.square.Square.scala.error
Compilation error:
Square:4: error: Unmatched closing brace '}' ignored here
}
^