turtleart.square.Square.scala.code
override def run() {avance(200);cercle(100);droite(90)}
}